yamlfiles/pgadmin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4-service
spec:
  selector:
    app: pgadmin4
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
