yamlfiles/ingress-pgadmin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
spec:
  rules:
  - host: pgadmintest.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin4-service
            port:
              number: 80
